# agent-toolkit

./: .env.sample  .gitignore  LICENSE  PROMPTS.md  README.md  نموذج ارسال
.github/: CODEOWNERS
modelcontextprotocol/: README.md  package-lock.json  package.json
python/: CHANGELOG.md  README.md  pyproject.toml  requirements.txt
python/examples/: readme.md
python/examples/bedrock/: .env.sample  app_agent.py  requirements.txt
python/examples/crewai/: .env.sample  app_agent.py  requirements.txt
python/examples/langchain/: .env.sample  app_agent.py  app_agent_openai.py  requirements.txt
python/examples/openai/: .env.sample  .env.template  app_agent.py  app_agents.py  app_agents_openai.py  app_assistant.py  app_assistant_openai.py  main.py  readme.md  requirements.txt
python/paypal_agent_toolkit/: api.py  configuration.py  functions.py  prompts.py  schema.py  tools.py
python/paypal_agent_toolkit/bedrock/: toolkit.py
python/paypal_agent_toolkit/common/: paypal_client.py  tool_handlers.py
python/paypal_agent_toolkit/crewai/: tool.py  toolkit.py
python/paypal_agent_toolkit/langchain/: tool.py  toolkit.py
python/paypal_agent_toolkit/openai/: tool.py  toolkit.py
python/paypal_agent_toolkit/shared/: paypal_client.py  tools.py
python/paypal_agent_toolkit/shared/disputes/: parameters.py
python/paypal_agent_toolkit/shared/insights/: parameters.py  prompts.py  tool_handlers.py
python/paypal_agent_toolkit/shared/invoices/: tool_handlers.py
python/paypal_agent_toolkit/shared/orders/: tool_handlers.py
python/paypal_agent_toolkit/shared/subscriptions/: prompts.py  tool_handlers.py
python/paypal_agent_toolkit/shared/tracking/: parameters.py  tool_handlers.py
python/paypal_agent_toolkit/shared/transactions/: tool_handlers.py
typescript/: .env.sample  CHANGELOG.md  README.md  package-lock.json  package.json  package1.json  (+2 more)
(+56 files in other folders)
